master: these arent the droids youre looking for

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     </style>
 </head>
 <body>
-    <p>nothing to see here</p>
+    <p>these aren't the droids you're looking for</p>
 </body>
 </html>
