master: move along

--- a/index.html
+++ b/index.html
@@ -7,15 +7,23 @@
     <title>jakeos/GitHub Pages</title>
     <style>
         body {
-            font-family: 'Courier New', Courier, monospace;
+            font-family: Arial, Helvetica, sans-serif;
             background-color: magenta;
             color: #000;
             text-align: center;
-            padding: 20px;
+            padding: 60px;
         }
     </style>
 </head>
 <body>
-    <p>these aren't the droids you're looking for</p>
+    <p>these<br>
+    aren't<br>
+    the<br>
+    droids<br>
+    you're<br>
+    looking<br>
+    for<br>
+    <br>
+    move along</p>
 </body>
 </html>
