master: different drag

--- a/index.html
+++ b/index.html
@@ -1,29 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>jakeos/GitHub Pages</title>
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: magenta;
-            color: #000;
-            text-align: center;
-            padding: 60px;
-        }
-    </style>
-</head>
-<body>
-    <p>these<br>
-    aren't<br>
-    the<br>
-    droids<br>
-    you're<br>
-    looking<br>
-    for<br>
-    <br>
-    move along</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+    <link rel="stylesheet" href="style.css" />
+    <title>What a Drag</title>
+  </head>
+  <body>
+    <div id="outerContainer">
+      <div id="container">
+        <p>What a Drag</p>
+        <div id="item"></div>
+      </div>
+    </div>
+    <script src="app.js"></script>
+    <!-- Based off of original work of kirupa.com -->
+  </body>
 </html>
